[package]
name = "memory39"
version = "1.0.0"
edition = "2024"
description = "Temporal-priority memory system for AI agents with SQLite core and Markdown surface"
license = "MIT"
authors = ["Alejandro Quintanar"]
repository = "https://github.com/alejandroqh/memory39"
readme = "README.md"
keywords = ["memory", "agent", "sqlite", "temporal", "cli"]
categories = ["command-line-utilities", "database"]

[profile.release]
strip = true
lto = true
codegen-units = 1

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.34", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
