[package]
name = "memory39"
version = "1.0.1"
edition = "2024"
description = "Temporal-priority memory system for AI agents"
authors = ["Alejandro Quintanar"]
license = "Apache-2.0"
repository = "https://github.com/alejandroqh/memory39"
homepage = "https://github.com/alejandroqh/memory39"
readme = "README.md"
keywords = ["memory", "agent", "sqlite", "temporal", "cli"]
categories = ["command-line-utilities", "database"]
exclude = [
    "dist/",
    "target/",
    ".claude/",
    ".claude-plugin/",
    "openclaw-plugin/",
    "CLAUDE.md",
    ".mcp.json",
    ".DS_Store",
    "build.sh",
    "benchmark.sh",
    "bench/",
]

[[bin]]
name = "memory39"
path = "src/main.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.34", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
turbomcp = "3"
dirs = "6"
bloomfilter = "3"
unicode-normalization = "0.1"
